# qwanban

./: .gitattributes  .gitignore  Cargo.toml  README.md
crates/qwanban-artifacts/: Cargo.toml
crates/qwanban-artifacts/src/: clip_cutter.rs  fs_store.rs  index.rs  lib.rs  store.rs  transcript_index.rs  web_report.rs
crates/qwanban-broker/: Cargo.toml
crates/qwanban-broker/src/: artifact_sink.rs  case_registry.rs  ingest.rs  lib.rs
crates/qwanban-cli/: Cargo.toml
crates/qwanban-cli/src/: main.rs
crates/qwanban-core/: Cargo.toml
crates/qwanban-core/src/: job.rs  lib.rs  manifest_builder.rs  orchestrator.rs  scheduler.rs  state.rs
crates/qwanban-guest/: Cargo.toml
crates/qwanban-guest/src/: breadcrumbs.rs  broker_client.rs  computer_use.rs  lib.rs  mcp.rs  supervisor.rs
crates/qwanban-hyperv/: Cargo.toml
crates/qwanban-hyperv/src/: hvsocket.rs  lib.rs  mock.rs
crates/qwanban-inference/: Cargo.toml
crates/qwanban-inference/src/: lib.rs  routing.rs
crates/qwanban-integration/: Cargo.toml
crates/qwanban-integration/src/: lib.rs
crates/qwanban-integration/tests/: bootstrap_hvsocket.rs  ingest_pipeline.rs  orchestrator_stub.rs
crates/qwanban-proto/: Cargo.toml
crates/qwanban-proto/src/: broker.rs  clip.rs  config.rs  error.rs  id.rs  input.rs  lib.rs  manifest.rs  timeline.rs  transcript.rs  video.rs
crates/qwanban-proxy/: Cargo.toml
crates/qwanban-proxy/src/: allowlist.rs  audit.rs  lib.rs  pipeline.rs
crates/qwanban-stub/: Cargo.toml
crates/qwanban-stub/src/: lib.rs  protocol.rs  serve.rs
crates/qwanban-vault/: Cargo.toml
crates/qwanban-vault/src/: file_vault.rs  lib.rs  rewriter.rs  snapshot.rs  watcher.rs
docs/: design.md  dev-workflow.md  hvsocket-integration-runbook.md  sequences.md  tcp-integration-runbook.md
docs/components/: README.md  agent-lifecycle.md  artifact-store-and-clipping.md  breadcrumbs-transcript.md  broker-protocol.md  hyperv-driver.md  inference-router.md  input-injection.md  mcp-server.md  mitm-proxy.md  stub-loader.md  video-capture-encode.md
observatory/: README.md  package.json  prettier.config.js
observatory/src/lib/: Host.svelte.ts  localStore.svelte.ts
observatory/src/lib/components/: HostChit.svelte
observatory/src/routes/: +page.svelte  layout.css
qbt/: Cargo.toml
qbt/src/: computer_use.rs  input.rs  main.rs  observed.rs  pal.rs  server.rs  transcode.rs  video.rs
qbt/src/pal/: windows.rs
qbt/src/pal/windows/: input.rs  screen.rs
qbt/src/pal/x11/: connection.rs  input.rs  screen.rs
scripts/: diag-vmic.ps1  self-test-hvsocket.ps1  setup-guest-hvsocket.ps1  setup-host-vmic.ps1  start-bootstrapd.ps1  start-vmic.ps1  stop-bootstrapd.ps1  teardown-guest-hvsocket.ps1  teardown-host-vmic.ps1  verify-and-register.ps1
