[package]
name = "qbt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
tokio = { version = "1.52.3", features = ["full"] }
rav1e = "0.8.1"
vpx-rs = "0.2.1"
webm-iterable = "0.6.4"
yuvutils-rs = { version = "0.8.3", features = ["fast_mode"] }

[target.'cfg(windows)'.dependencies]
windows = {
    version = "0.62.2",
    features = [
        "Win32_Foundation",
        "Win32_Graphics_Gdi",
        "Win32_UI_HiDpi",
        "Win32_UI_WindowsAndMessaging",
    ]
}

[[bin]]
name = "qbt"
path = "src/main.rs"