[package]
name = "qwanban-artifacts"
description = "Artifact store: content-addressed recordings/clips/logs, clip cutting, web report serving"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qwanban-proto.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
sha2.workspace = true
parking_lot.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "fs"] }
tempfile = "3"
