[package]
name = "qwanban-cli"
description = "Command-line interface to submit jobs and inspect reports"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "qwanban"
path = "src/main.rs"

[dependencies]
qwanban-proto.workspace = true
qwanban-core.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
