[package]
name = "qwanban-guest"
description = "In-guest qwan agent: supervisor, broker client, breadcrumbs, capture, computer-use, qwan MCP"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qwanban-proto.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
bytes.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
parking_lot.workspace = true
