[package]
name = "qwanban-hyperv"
description = "Hyper-V driver: VM lifecycle, disks, networking, hvsocket, checkpoints"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qwanban-proto.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
