[package]
name = "qwanban-hyperv"
description = "Hyper-V driver: VM lifecycle, disks, networking, TCP bootstrap, checkpoints"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qwanban-proto.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
