[package]
name = "qwanban-inference"
description = "OpenAI-compatible router: model allowlist, LM Studio/cloud routing, dummy→real swap"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qwanban-proto.workspace = true
qwanban-vault.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
