[package]
name = "qwanban-proto"
description = "Shared wire types, identifiers, timeline model, and error types for qwanban"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
