[package]
name = "qwanban-stub"
description = "hvsocket stub loader baked into base images (push/write/launch, no SSH)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qwanban-proto.workspace = true
qwanban-hyperv.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
