[package]
name = "qwanban-vault"
description = "Secret vault: host secrets.toml ([real] + [[rewrite]] search→replace), hot-reload"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qwanban-proto.workspace = true
serde.workspace = true
toml.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
